# mustui

./: Cargo.toml  LICENSE  README.md
crates/ytm-core/: Cargo.toml
crates/ytm-core/src/: artwork.rs  client.rs  error.rs  lib.rs  search.rs  ytdlp.rs
crates/ytm-core/src/player/: actor.rs  mod.rs  source.rs
crates/ytm-tui/: Cargo.toml
crates/ytm-tui/src/: app.rs  events.rs  logging.rs  main.rs
crates/ytm-tui/src/ui/: layout.rs  theme.rs
crates/ytm-tui/src/ui/panes/: center.rs  now_playing.rs  playlists.rs
src/: action.rs  app.rs  artwork.rs  audio.rs  client.rs  data.rs  domain.rs  error.rs  library.rs  logging.rs  main.rs  messages.rs  model.rs  models.rs  msg.rs  playlist.rs  search.rs  state.rs  task.rs  terminal.rs  update.rs  ytdlp.rs
src/data/: library.rs  ytdlp.rs
src/player/: mod.rs  source.rs
src/ui/: mod.rs  player.rs  search.rs  theme.rs
src/ui/panes/: center.rs  mod.rs  now_playing.rs
