[package]
name    = "ytm-tui"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Julia Rzymowska"]

[[bin]]
name = "ytm-tui"
path = "src/main.rs"

[dependencies]
tokio              = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "process"] }
rodio              = { version = "0.22", default-features = false, features = ["playback", "symphonia-all"] }
reqwest            = "0.12"
ratatui            = { version = "0.30", features = ["crossterm_0_29", "all-widgets"] }
crossterm          = { version = "0.29", features = ["event-stream"] }
futures            = "0.3"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
toml               = "0.8"
thiserror          = "2"
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender   = "0.2"
directories        = "5"
ratatui-image      = { version = "11", default-features = false, features = ["crossterm", "image-defaults"] }
image              = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }

[profile.release]
strip = true
lto   = true
