[package]
name    = "mustui"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Julia Rzymowska"]

[[bin]]
name = "mustui"
path = "src/main.rs"

[dependencies]
# TUI
ratatui        = { version = "0.30", features = ["crossterm_0_29", "all-widgets"] }
crossterm      = "0.29"

# Audio
rodio          = { version = "0.22", default-features = false, features = ["playback", "symphonia-all"] }

# Serialization
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"

# Error handling
thiserror      = "2"
anyhow         = "1"

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender   = "0.2"

# Utilities
directories = "5"

[profile.release]
strip = true
lto   = true
