[package]
name    = "ytm-core"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio        = { workspace = true }
rodio        = { workspace = true }
reqwest      = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
chrono       = { workspace = true }
image        = { workspace = true }
directories  = { workspace = true }

[dev-dependencies]
anyhow              = { workspace = true }
tracing-subscriber  = { workspace = true }
