[package]
name    = "ytm-tui"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "ytm-tui"
path = "src/main.rs"

[dependencies]
ytm-core = { path = "../ytm-core" }

tokio              = { workspace = true }
ratatui            = { workspace = true }
crossterm          = { workspace = true }
futures            = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender   = { workspace = true }
directories        = { workspace = true }
ratatui-image      = { workspace = true }
image              = { workspace = true }
